day04/kustomize/base/v1_api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v1-deploy
  namespace: day04
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
      name: api-v1-po
  template:
    metadata:
      labels:
        app: api
        name: api-v1-po
    spec:
      containers:
      - name: api-container 
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-v1-svc
  namespace: day04
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-v1-po
  ports:
  - name: http
    port: 3000
    targetPort: 3000
