day04/kustomize/base/api-httproute-domain.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-v1-httproute
  namespace: day04
spec:
  parentRefs:
  - name: cfdsa-gtw
    namespace: cfdsa
    port: 80
  hostnames:
    # Test /api/data
  - v1.167.99.29.152.nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - namespace: day04
      name: api-v1-svc
      port: 3000
